<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="recovery_retry" type="id" />
    <item name="recovery_start_empty" type="id" />
    <item name="recovery_status" type="id" />
    <item name="main_scroll" type="id" />
    <item name="toolbar_back" type="id" />
    <item name="screen_title" type="id" />
    <item name="onboarding_templates" type="id" />
    <item name="onboarding_empty" type="id" />
    <item name="home_pick_5" type="id" />
    <item name="home_pick_15" type="id" />
    <item name="home_pick_30" type="id" />
    <item name="home_tasks" type="id" />
    <item name="home_rooms" type="id" />
    <item name="home_history" type="id" />
    <item name="home_resume" type="id" />
    <item name="add_room" type="id" />
    <item name="room_name" type="id" />
    <item name="room_save" type="id" />
    <item name="room_edit" type="id" />
    <item name="room_delete" type="id" />
    <item name="rooms_list" type="id" />
...
    <item name="plan_start" type="id" />
    <item name="plan_total" type="id" />
    <item name="plan_empty" type="id" />
    <item name="plan_excluded" type="id" />
    <item name="session_complete" type="id" />
    <item name="session_undo" type="id" />
    <item name="session_cancel" type="id" />
    <item name="session_finish" type="id" />
    <item name="session_pause" type="id" />
    <item name="session_progress" type="id" />
    <item name="session_list" type="id" />
    <item name="history_list" type="id" />
    <item name="privacy_choice" type="id" />
    <item name="privacy_policy" type="id" />
    <item name="ad_label" type="id" />
    <item name="ad_container" type="id" />
</resources>

